removed webkit backface visibility as it did not fix flickering

--- a/app/assets/stylesheets/projects/_layouts.scss
+++ b/app/assets/stylesheets/projects/_layouts.scss
@@ -26,7 +26,6 @@ img {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  -webkit-backface-visibility: hidden;
 }
 
 .intro-text {
